# genQC

./: .gitignore  404.html  CITATION.cff  Dockerfile.genqc  LICENSE.txt  MANIFEST.in  README.md  RELEASES.html  config_loader.html  get_started.html  index.html  listings.json  metrics.html  printing.html  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  util.html
benchmark/: bench_compilation.html
dataset/: balancing.html  cached_dataset.html  cached_qc_dataset.html  circuits_dataset.html  config_dataset.html  dataset_helper.html  mixed_cached_dataset.html  mixed_cached_qc_dataset.html  qc_dataset.html
examples/: dataset_and_finetune.html  editing_and_masking.html  hello_circuit.html  tutorials.html  unitary_compilation.html
genQC/: _modidx.py  config_loader.py  imports.py  metrics.py  printing.py  util.py
inference/: eval_metrics.html  evaluation_helper.html  export_cudaq.html  infer_compilation.html  infer_gate_hist.html  infer_misc.html  infer_srv.html  sampling.html
models/: config_model.html  frozen_open_clip.html  layers.html  position_encoding.html  transformers.html  unet_qc.html  unitary_encoder.html
pipeline/: callbacks.html  compilation_diffusion_pipeline.html  diffusion_pipeline.html  diffusion_pipeline_special.html  metrics.html  multimodal_diffusion_pipeline.html  pipeline.html  unitary_clip_pipeline.html
platform/: circuits_generation.html  circuits_instructions.html  qcircuit_dataset_construction.html  qcircuit_evaluation.html  qcircuit_metrics.html  qcircuit_util.html  simulation.html
scheduler/: scheduler.html  scheduler_ddim.html  scheduler_ddpm.html  scheduler_dpm.html
src/: 404.qmd  RELEASES.md  _quarto.yml  config_loader.ipynb  get_started.ipynb  index.ipynb  index.qmd  metrics.ipynb  nbdev.yml  printing.ipynb  util.ipynb
utils/: async_fn.html  config_loader.html  math.html  misc_utils.html
webpage/: api_reference.css  api_reference.html  research.html  styles.css
(+181 files in other folders)
